switch post title back to dynamic height to prevent cutoff issues on smaller screens

--- a/assets/themes/min-ting/css/style.css
+++ b/assets/themes/min-ting/css/style.css
@@ -265,7 +265,6 @@ pre {
 	background-repeat: repeat;
 	background-position: 0 0;
 	background-color: #004563;
-	height: 50px;
 	margin-bottom: 1.625em;
 	padding-top: 1.625em;
 	padding-bottom: 1.625em;
